<resources>
    <string name="app_name">Светотехника</string>
    <string name="name0">ГК \"Светотехника\"</string>

    <string name="cat_name">Каталог продукции</string>
    <string name="menu_home">Главная</string>
    <string name="menu_gallery">Каталог</string>
    <string name="menu_contact">Контакты</string>
    <string name="check_connection_text">Интернет-соединение отсутствует</string>
    <string name="url">https://swetotehnika.ru</string>
    <string name="zakaz">Заказ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Главная страница приложения</string>
    <string name="cart">Добавить</string>
    <string name="zero_text">Корзина пуста. Выберите товар.</string>
    <string name="name">Группа компаний \"Светотехника\"</string>
    <string name="present">
        Осуществляем оптовую продажу (от 20000руб.) светотехнической продукции с 2005 года. Реализуем продукцию крупнейших заводов России
        и зарубежья, производителей светотехники. Практикуем индивидуальный ценовой подход для постоянных клиентов.
    </string>
    <string name="swet_elektro">ООО \"Светотехника - Электро\" ИНН 7733823142</string>
    <string name="swetotehnika">ООО \"ГК\"Светотехника МСК\" ИНН 7720442598</string>
    <string name="pop_tovar">Популярные товары:</string>
    <string name="close">Закрыть</string>
    <string name="news">Новости:</string>
    <string-array name="type">
        <item>Офис общего назначения с компьютером</item>
        <item>Офис, в котором ведутся чертежные работы</item>
        <item>Зал для конференций, переговорная комната</item>
        <item>Эскалатор, лестница</item>
        <item>Холл, коридор</item>
        <item>Архив</item>
        <item>Подсобные помещения, кладовая</item>
        <item>Жилая комната, кухня</item>
        <item>Детская комната</item>
        <item>Ванная,душевая,санузел,квартирные коридоры и холлы</item>
        <item>Гардеробная</item>
        <item>Кабинет, библиотека</item>
        <item>Лестница</item>
        <item>Сауна, бассейн</item>
    </string-array>
    <string-array name="height">
       <item>от 2,5 до 2,7 метра</item>
       <item>от 2,7 до 3 метра</item>
       <item>от 3 до 3,5 метра</item>
       <item>от 3,5 до 4,5 метра</item>
    </string-array>
</resources>