<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home"/>
        <item
            android:id="@+id/nav_catalog"
            android:icon="@drawable/ic_catalog"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_zakaz"
            android:icon="@drawable/ic_zakaz"
            android:title="@string/zakaz" />
<!--        <item-->
<!--            android:id="@+id/nav_home"-->
<!--            android:icon="@drawable/ic_price"-->
<!--            android:title="@string/menu_slideshow" />-->
        <item
            android:id="@+id/nav_contact"
            android:icon="@drawable/ic_contact"
            android:title="@string/menu_contact" />

</menu>