<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:textSize="18dp"
        android:textColor="@color/blue"
        android:text="@string/name"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="14dp"
            android:textColor="@color/blue"
            android:text="@string/url"/>

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_margin="16dp"
        android:textStyle="normal"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:text="@string/present"/>


    <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_margin="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textStyle="normal"
        android:textSize="16dp"
        android:textColor="@color/black"
        android:text="@string/pop_tovar"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    </LinearLayout>

   </ScrollView>