<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet_contact"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="280dp"
    android:elevation="5dp"
    android:background="@color/ic_launcher_background"
    app:behavior_hideable="true"
    app:behavior_peekHeight="30dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:id="@+id/bottom_sheet_line"
        android:layout_width="65dp"
        android:layout_height="3dp"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:text="@string/name"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bottom_sheet_line" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/swet_elektro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/swetotehnika"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="125466, Москва, Юровская ул, д.92 оф. 1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <com.google.android.material.chip.Chip
        android:id="@+id/email1_chip"
        style="@style/chip_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="info@swetotehnika.ru"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:chipIcon="@drawable/ic_email_24"
        app:chipIconTint="@color/black"
        app:iconStartPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:ignore="MissingConstraints" />


    <com.google.android.material.chip.Chip
        android:id="@+id/tel_chip"
        style="@style/chip_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+7-967-058-87-15"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:chipIcon="@drawable/ic_phone"
        app:chipIconTint="@color/black"
        app:iconStartPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email1_chip"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.chip.Chip
        android:id="@+id/tel1_chip"
        style="@style/chip_color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="+7-903-235-23-24"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:chipIcon="@drawable/ic_phone"
        app:chipIconTint="@color/black"
        app:iconStartPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tel_chip"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>